# codex-mail-workbench

./: .gitignore  AGENTS.md  Makefile  README.md  README.zh-CN.md  pyproject.toml
config/: accounts.example.yaml
docs/: architecture.md  local-profile.md
scripts/: migrate-digital-twin-mail.sh  migrate-mail-store.sh
skills/codex-mail-workbench/: SKILL.md
skills/codex-mail-workbench/agents/: openai.yaml
src/codex_mail_workbench/: __init__.py  cli.py  config.py  mcp_server.py  message.py  paths.py  store.py  sync.py
tests/: test_cli.py  test_config.py  test_mcp_server.py  test_store.py  test_sync.py
